add refs and trace inequality

--- a/headers.tex
+++ b/headers.tex
@@ -52,7 +52,7 @@
 \newcommand{\mypar}[1]{\left( #1 \right)}
 \newcommand{\inv}[1]{{#1}^{-1}}
 \newcommand{\pinv}[1]{\inv{\mypar{#1}}}
-\newcommand{\indfunc}[1]{\chi_{#1}}
+\newcommand{\indfunc}[1]{\chi\mypar{#1}}
 
 \newcommand{\bsym}[1]{\boldsymbol{#1}}
 \newcommand{\myord}[1]{{#1}^{\rm{th}}}
