--- a/refs.bib
+++ b/refs.bib
@@ -298,6 +298,27 @@
   bibsource  = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{FrHeJa98,
+  author    = {Gerd Fricke and
+               Stephen T. Hedetniemi and
+               David Pokrass Jacobs},
+  title     = {Independence and Irredundance in k-Regular Graphs},
+  journal   = {Ars Comb.},
+  volume    = {49},
+  year      = {1998},
+  timestamp = {Fri, 09 Jan 2004 14:46:16 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/arscom/FrickeHJ98},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{ClPo11,
+  title     = {A submodular optimization framework for leader selection in linear multi-agent systems},
+  author    = {Clark, Andrew and Poovendran, Radha},
+  booktitle = {IEEE Conference on Decision and Control and European Control Conference},
+  pages     = {3614-3621},
+  year      = {2011}
+}
+
 % Nearly Linear Time Algorithm for Mean Hitting Times of Random Walks on a Graph
 
 @inproceedings{Ac01,
