fix typo of \vecz

--- a/headers.tex
+++ b/headers.tex
@@ -72,7 +72,7 @@
 \newcommand{\vecs}{\bsym{s}}
 \newcommand{\vecx}{\bsym{x}}
 \newcommand{\vecy}{\bsym{y}}
-\newcommand{\vecz}{\bsym{y}}
+\newcommand{\vecz}{\bsym{z}}
 
 \newcommand{\vcal}{\mathcal{V}}
 \newcommand{\pscr}{\mathscr{P}}
