--- a/refs.bib
+++ b/refs.bib
@@ -171,15 +171,15 @@
 }
 
 @article{BoRaZh11,
-  title     = {Commute times for a directed graph using an asymmetric Laplacian},
+  title     = {{Commute times for a directed graph using an asymmetric Laplacian}},
   author    = {Boley, Daniel and Ranjan, Gyan and Zhang, Zhi-Li},
-  journal   = {Linear Algebra and its Applications},
+  journal   = {Linear Algebra Appl.},
   volume    = {435},
   number    = {2},
   pages     = {224--242},
   year      = {2011},
   publisher = {Elsevier}
-}
+}%journal={Linear Algebra and its Applications},
 
 
 @article{Hu14,
@@ -854,3 +854,59 @@
   year      = {2019},
   publisher = {IEEE}
 }
+
+@article{ZhYaLi12,
+  title     = {Random walks in modular scale-free networks with multiple traps},
+  author    = {Zhang, Zhongzhi and Yang, Yihang and Lin, Yuan},
+  journal   = {Phys. Rev. E},
+  volume    = {85},
+  number    = {1},
+  pages     = {011106},
+  year      = {2012},
+  publisher = {APS}
+}%  journal={Physical Review E},
+
+@article{KaGrTh13,
+  title={The entropy of conditional {M}arkov trajectories},
+  author={Kafsi, Mohamed and Grossglauser, Matthias and Thiran, Patrick},
+  journal={IEEE Trans. Inf. Theory},
+  volume={59},
+  number={9},
+  pages={5577--5583},
+  year={2013},
+  publisher={IEEE}
+}
+
+@article{ShZh19,
+  title={Low-mean hitting time for random walks on heterogeneous networks},
+  author={Sheng, Yibin and Zhang, Zhongzhi},
+  journal={IEEE Trans. Inf. Theory},
+  volume={65},
+  number={11},
+  pages={6898--6910},
+  year={2019},
+  publisher={IEEE}
+}%  journal={IEEE Transactions on Information Theory},
+
+
+@article{ClAlBuPo19,
+  title={On the structure and computation of random walk times in finite graphs},
+  author={Clark, Andrew and Alomair, Basel and Bushnell, Linda and Poovendran, Radha},
+  journal={IEEE Trans. Autom. Control},
+  volume={64},
+  number={11},
+  pages={4470--4483},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{BlJaRy22,
+  title={The Cover Time of a Random Walk in Affiliation Networks},
+  author={Bloznelis, Mindaugas and Jaworski, Jerzy and Rybarczyk, Katarzyna},
+  journal={IEEE Trans. Inf. Theory},
+  volume={68},
+  number={9},
+  pages={6134--6150},
+  year={2022},
+  publisher={IEEE}
+}%  journal={IEEE Transactions on Information Theory},
